# rust-bevy-topdown-shooter

./: Cargo.toml  todo.md
assets/: td.afdesign
src/: blood.rs  bullet.rs  debug.rs  enemy.rs  grid.rs  main.rs  navigation.rs  player.rs  projectile.rs  wall.rs  weapon.rs
