[package]
name = "td"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }

bevy_prototype_lyon = "0.4.0"

bevy_screen_diags = "*"

# 
bevy_rapier2d = { version = "*", features = [ "simd-nightly", "parallel", "render" ] }

bevy-inspector-egui = "0.9.0"
rand = "*"

# Used for tilemapping with Tiled
tiled = "0.10.1"
bevy_ecs_tilemap = "*"
anyhow = { version = "1.0" }

dubble = "*"
queues = "1.1.0"
bit-vec = "*"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=off"]

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"] 
opt-level = 3

[profile.dev.package."gltf-derive"] 
opt-level = 1